# mirror-mirror

./: .gitignore  README.md  pyproject.toml
src/mirror_mirror/: __init__.py  cli.py  github.py  report.py  summarize.py
