[project]
name = "mirror-mirror"
version = "0.1.0"
description = "Scan GitHub contributions and generate weekly work reports"
readme = "README.md"
authors = [
    { name = "Bangxin Hu", email = "hu.bangxin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "click",
    "rich",
    "python-dotenv",
    "openai",
    "markdown",
]

[project.scripts]
mirror = "mirror_mirror.cli:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
